<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aidin_ft_sensor</name>
  <version>0.0.1</version>
  <description>ROS2 package for Aidin Roboitc AFT200-D80-EC 6-axis Force Torque Sensor over EtherCat</description>
  <maintainer email="robert@todo.todo">Robert Ristic</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
